--- a/homepage.html
+++ b/homepage.html
@@ -84,96 +84,14 @@
 						</button>
 						<div class="collapse navbar-collapse navCollapse text-uppercase fwBlack" id="navbarNav">
 							<ul class="navbar-nav">
-								<li class="nav-item active dropdown">
-									<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" href="javascript:void(0);" aria-expanded="false">Home <span class="sr-only">(current)</span></a>
-									<div class="dropdown-menu border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu">
-											<li><a class="dropdown-item" href="homepage.html">homepage 1</a></li>
-											<li><a class="dropdown-item" href="homepage2.html">homepage 2</a></li>
-											<li><a class="dropdown-item" href="homepage3.html">homepage 3</a></li>
-											<li><a class="dropdown-item" href="homepage4.html">homepage 4</a></li>
-											<li><a class="dropdown-item" href="homepage5.html">homepage 5</a></li>
-										</ul>
-									</div>
+								<li class="nav-item active">
+									<a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
 								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">Services &amp; Pricing</a>
-									<div class="dropdown-menu border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu">
-											<li><a class="dropdown-item" href="service-page.html">Services &amp; Pricing</a></li>
-											<li><a class="dropdown-item" href="service-detail.html">express exterior</a></li>
-											<li><a class="dropdown-item" href="service-detail2.html">auto detailing</a></li>
-											<li><a class="dropdown-item" href="service-detail3.html">full service wash</a></li>
-											<li><a class="dropdown-item" href="service-detail4.html">complete detail wash</a></li>
-											<li><a class="dropdown-item" href="service-detail5.html">oil changing</a></li>
-											<li><a class="dropdown-item" href="service-detail6.html">preventative maintenance</a></li>
-										</ul>
-									</div>
+								<li class="nav-item">
+									<a class="nav-link" href="service-page.html">Services &amp; Pricing</a>
 								</li>
-								<li class="nav-item"><a class="nav-link" href="About us.html">About</a></li>
-								<li class="nav-item"><a class="nav-link" href="Unlimited Wash Club.html">Unlimited Wash Club</a></li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">Locations</a>
-									<div class="dropdown-menu  border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu border-0">
-											<li><a class="dropdown-item" href="location.html">Locations</a></li>
-											<li><a class="dropdown-item" href="location detail.html">Locations Detail</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">PAGES</a>
-									<div class="dropdown-menu border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu border-0">
-											<li><a class="dropdown-item" href="testimonial.html">testimonial</a></li>
-											<li><a class="dropdown-item" href="coudon &amp; offer.html">coupons &amp; offers!</a></li>
-											<li class="dropdown subMenuDrop">
-												<a class="dropdown-item dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" href="javascript:void(0);" aria-expanded="false">image gallery<span class="sr-only">(current)</span></a>
-												<div class="dropdown-menu subMenu border-0 rounded-0 text-capitalize">
-													<ul class="list-unstyled">
-														<li><a class="dropdown-item" href="gallery grid.html">gallery grid</a></li>
-														<li><a class="dropdown-item" href="gallery masonary.html">gallery masonry</a></li>
-														<li><a class="dropdown-item" href="gallery fullwidth.html">gallery fullwidth</a></li>
-													</ul>
-												</div>
-											</li>
-											<li><a class="dropdown-item" href="Join Emial Club.html">join email clib</a></li>
-											<li><a class="dropdown-item" href="FAQ.html">FAQ</a></li>
-											<li><a class="dropdown-item" href="cancel plan.html">Cancal Membership</a></li>
-											<li><a class="dropdown-item" href="my account.html.html">My Account</a></li>
-											<li><a class="dropdown-item" href="404 page.html">404 error page</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">shop</a>
-									<div class="dropdown-menu  border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu border-0">
-											<li><a class="dropdown-item" href="shop Grid.html">shop grid</a></li>
-											<li><a class="dropdown-item" href="shop- List.html">shop list</a></li>
-											<li><a class="dropdown-item" href="shop single product.html">shop single product</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">NEWS</a>
-									<div class="dropdown-menu border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu border-0">
-											<li><a class="dropdown-item" href="blog single post.html">blog single post</a></li>
-											<li><a class="dropdown-item" href="Blog Grid.html">Blog Grid</a></li>
-											<li><a class="dropdown-item" href="blog classic right sidebar.html">blog classic right sidebar</a></li>
-											<li><a class="dropdown-item" href="blog classic left sidebar.html">blog classic left sidebar</a></li>
-										</ul>
-									</div>
-								</li>
-								<li class="nav-item dropdown">
-									<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="javascript:void(0);">CONTACT</a>
-									<div class="dropdown-menu  border-0 rounded-0 text-capitalize" aria-labelledby="navbarDropdown">
-										<ul class="list-unstyled dropMenu border-0">
-											<li><a class="dropdown-item" href="contact 1.html">contact 1</a></li>
-											<li><a class="dropdown-item" href="contact 2.html">contact 2</a></li>
-										</ul>
-									</div>
+								<li class="nav-item">
+									<a class="nav-link" href="contact 1.html">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -189,6 +107,7 @@
 					</nav>
 				</div>
 			</div>
+			
 		</header>
 		<main>
 			<!-- bannerSec -->
