7th /Edit Footer Link

--- a/homepage.html
+++ b/homepage.html
@@ -854,8 +854,6 @@
 								<ul class="fLink list-unstyled text-capitalize">
 									<li><a href="homepage.html">home</a></li>
 									<li><a href="service-page.html">Service &amp; Pricing</a></li>
-									<li><a href="About us.html">About</a></li>
-									<li><a href="location.html">locations</a></li>
 									<li><a href="contact 1.html">contact us</a></li>
 								</ul>
 							</div>
@@ -954,7 +952,7 @@
 								<div class="d-sm-flex vehicleWrapCheck flex-wrap">
 									<div class="form-check">
 										<input class="form-check-input" type="checkbox" name="vehicle_type[]" value="SUV" id="defaultCheck1">
-										<label class="form-check-label" for="defaultCheck1">SUV</label>
+										<label class="form-check-label" for="defaultCheck1">Small Cars</label>
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="checkbox" name="vehicle_type[]" value="Sedan" id="defaultCheck2">
@@ -962,15 +960,11 @@
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="checkbox" name="vehicle_type[]" value="Small SUV" id="defaultCheck3">
-										<label class="form-check-label" for="defaultCheck3">Small SUV</label>
+										<label class="form-check-label" for="defaultCheck3">SUVs & Trucks</label>
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="checkbox" name="vehicle_type[]" value="Mini Van" id="defaultCheck4">
-										<label class="form-check-label" for="defaultCheck4">Mini Van</label>
-									</div>
-									<div class="form-check">
-										<input class="form-check-input" type="checkbox" name="vehicle_type[]" value="Pickup Truck" id="defaultCheck5">
-										<label class="form-check-label" for="defaultCheck5">Pickup Truck</label>
+										<label class="form-check-label" for="defaultCheck4">Vans & Boats</label>
 									</div>
 								</div>
 							</div>
