--- a/index.html
+++ b/index.html
@@ -1073,9 +1073,9 @@
 
 		<span id="back-top" class="text-center rounded-circle fa fa-angle-up"></span>
 		<!-- loader of the page -->
-		<div id="loader" class="loader-holder">
+		<!-- <div id="loader" class="loader-holder">
 			<div class="block"><img src="images/svg/three-dots.svg" width="60" alt="loader"></div>
-		</div>
+		</div> -->
 	</div>
 	<!-- include jQuery library -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
