--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div class="col-6 col-md-4">
 							<!-- Logo -->
 							<div class="logo position-relative">
-								<a href="homepage.html">
+								<a href="index.html">
 									<img src="images/logo 1.png" alt="Auto &amp; Detailing template" class="img-fluid">
 								</a>
 							</div>
@@ -73,7 +73,7 @@
 					<nav class="navbar navHolder d-flex navbar-expand-lg navbar-dark p-0 mt-lg-0 mr-lg-0 position-static">
 						<!-- MenuLogo -->
 						<div class="menuLogo">
-							<a href="homepage.html">
+							<a href="index.html">
 								<img src="images/logo 3.png" alt="Auto &amp; Detailing template" class="img-fluid logoWhite">
 								<img src="images/logo 1.png" alt="Auto &amp; Detailing template" class="img-fluid logoBlack">
 							</a>
@@ -85,7 +85,7 @@
 						<div class="collapse navbar-collapse navCollapse text-uppercase fwBlack" id="navbarNav">
 							<ul class="navbar-nav">
 								<li class="nav-item active">
-									<a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+									<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="service-page.html">Services &amp; Pricing</a>
@@ -217,10 +217,19 @@
 			<!-- olneBook -->
 			<aside class="olneBook bgTheme py-7">
 				<div class="container">
-					<div class="d-md-flex align-items-center justify-content-center text-center text-md-left">
-						<h3 class="h4 text-white fwSemibold mb-4 mb-md-0">Easy Online Carwash Booking System</h3>
-						<a href="javascript:void(0);" class="btn btn-primary fwEbold text-uppercase py-3 py-lg-4 ml-md-4 ml-lg-6" data-toggle="modal" data-target="#exampleModal">bOOK aPPOINTMENT</a>
+				  <div class="d-md-flex align-items-center justify-content-center text-center text-md-left">
+					<h3 class="h4 text-white fwSemibold mb-4 mb-md-0">Easy Online Carwash Booking System</h3>
+					<a href="javascript:void(0);" class="btn btn-primary fwEbold text-uppercase py-3 py-lg-4 ml-md-4 ml-lg-6" data-toggle="modal" data-target="#exampleModal">bOOK aPPOINTMENT</a>
+					<div class="d-flex flex-wrap ml-md-4 ml-lg-6">
+					  <span class="ico d-block mr-lg-2 pt-lg-2">
+						<a href="tel:1-403-481-0433" class="fas fa-phone rounded-sm p-lg-0 icn"></a>
+					  </span>
+					  <div class="wrap d-none d-lg-block">
+						<span class="text d-block text-white">Call Now</span>
+						<a class="tell fwSemibold text-white" href="tel:+14034810433">1-403-481-0433</a>
+					  </div>
 					</div>
+				  </div>
 				</div>
 			</aside>
 			<!-- wsiSec -->
@@ -792,7 +801,7 @@
 								<h6 class="h6 text-capitalize fwEbold text-white mb-4 mb-lg-6">Usefull Links</h6>
 								<!-- fLink -->
 								<ul class="fLink list-unstyled text-capitalize">
-									<li><a href="homepage.html">home</a></li>
+									<li><a href="index.html">home</a></li>
 									<li><a href="service-page.html">Service &amp; Pricing</a></li>
 									<li><a href="contact 1.html">contact us</a></li>
 								</ul>
@@ -852,7 +861,7 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-12 col-md-6">
-						<span class="txt d-block text-center text-md-left mb-4 mb-md-0">©2024 <a href="homepage.html">Orbit Interior Auto Detailing</a> . All Rights Reserved</span>
+						<span class="txt d-block text-center text-md-left mb-4 mb-md-0">©2024 <a href="index.html">Orbit Interior Auto Detailing</a> . All Rights Reserved</span>
 					</div>
 					<div class="col-12 col-md-6">
 						<!-- footerLink -->
@@ -1018,7 +1027,9 @@
 		</div> -->
 	</div>
 	<!-- include jQuery library -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 	<!-- include popup library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<!-- include bootstrap JavaScript -->
