add text now button

--- a/index.html
+++ b/index.html
@@ -113,38 +113,42 @@
 			<!-- bannerSec -->
 			<section class="bannerSec bannerSlide">
 				<div>
-					<div class="bsSlide bgCover overlay text-center position-relative d-flex" style="background-image: url(./images/img03.jpg)">
-						<div class="alignCenter w-100 d-flex align-items-center">
-							<div class="container pt-6 pt-sm-10 pb-22 pt-md-12 pb-md-25 pt-lg-15 pb-lg-35">
-								<div class="caption text-white position-relative">
-									<h1 class="w-100 mb-6 mb-md-9 text-white">
-										<strong class="fwEbold d-block mb-md-2 mb-xl-0"> Roads Are Dirty... </strong>
-										<strong class="fwEbold d-block mb-3 mt-md-n4 mb-md-2">Let Us Bring the Shine to You!</strong>
-										<strong class="fwEbold d-block font-weight-bold headingVI">Drive Clean, Right at Home!</strong>
-									</h1>
-									<a href="javascript:void(0);" class="btn btnTheme text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6" data-toggle="modal" data-target="#exampleModal">Book an Appointment Now!</a>
-
-								</div>
-							</div>
+				  <div class="bsSlide bgCover overlay text-center position-relative d-flex" style="background-image: url(./images/img03.jpg)">
+					<div class="alignCenter w-100 d-flex align-items-center">
+					  <div class="container pt-6 pt-sm-10 pb-22 pt-md-12 pb-md-25 pt-lg-15 pb-lg-35">
+						<div class="caption text-white position-relative">
+						  <h1 class="w-100 mb-6 mb-md-9 text-white">
+							<strong class="fwEbold d-block mb-md-2 mb-xl-0"> Roads Are Dirty... </strong>
+							<strong class="fwEbold d-block mb-3 mt-md-n4 mb-md-2">Let Us Bring the Shine to You!</strong>
+							<strong class="fwEbold d-block font-weight-bold headingVI">Drive Clean, Right at Home!</strong>
+						  </h1>
+						  <div class="d-flex justify-content-center">
+							<a href="javascript:void(0);" class="btn btnTheme text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6 mx-2" data-toggle="modal" data-target="#exampleModal">Book an Appointment Now!</a>
+							<a href="sms:+14034810433" class="btn btn-success text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6 mx-2" style="background-color: #28a745; border-color: #28a745; color: #fff;">Text Us Now</a>
+						  </div>
 						</div>
+					  </div>
 					</div>
+				  </div>
 				</div>
 				<div>
-					<div class="bsSlide bgCover overlay position-relative d-flex" style="background-image: url(./images/img01.jpg)">
-						<div class="alignCenter d-flex w-100 align-items-center">
-							<div class="container pt-6 pt-sm-10 pb-22 pt-md-12 pb-md-25 pt-lg-15 pb-lg-35">
-								<div class="caption text-white position-relative text-center text-xxl-left">
-									<h1 class="heading w-100 mb-7 mb-md-10 text-white">
-										<strong class="d-block fwEbold  mb-md-2 mb-xl-0">Get the Best</strong>
-										<strong class="d-block fwEbold mb-4">Interior Car Detailing in Calgary! </strong>
-										<strong class="d-block fwSemibold headingXII">Drive Fresh, Drive Happy!</strong>
-									</h1>
-									<a href="javascript:void(0);" class="btn btnTheme text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6" data-toggle="modal" data-target="#exampleModal">Book an Appointment Now!</a>
-
-								</div>
-							</div>
+				  <div class="bsSlide bgCover overlay position-relative d-flex" style="background-image: url(./images/img01.jpg)">
+					<div class="alignCenter d-flex w-100 align-items-center">
+					  <div class="container pt-6 pt-sm-10 pb-22 pt-md-12 pb-md-25 pt-lg-15 pb-lg-35">
+						<div class="caption text-white position-relative text-center text-xxl-left">
+						  <h1 class="heading w-100 mb-7 mb-md-10 text-white">
+							<strong class="d-block fwEbold mb-md-2 mb-xl-0">Get the Best</strong>
+							<strong class="d-block fwEbold mb-4">Interior Car Detailing in Calgary!</strong>
+							<strong class="d-block fwSemibold headingXII">Drive Fresh, Drive Happy!</strong>
+						  </h1>
+						  <div class="d-flex justify-content-center">
+							<a href="javascript:void(0);" class="btn btnTheme text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6 mx-2" data-toggle="modal" data-target="#exampleModal">Book an Appointment Now!</a>
+							<a href="sms:+14034810433" class="btn btn-success text-uppercase fwEbold py-3 px-4 py-md-4 px-md-6 mx-2" style="background-color: #28a745; border-color: #28a745; color: #fff;">Text Us Now</a>
+						  </div>
 						</div>
+					  </div>
 					</div>
+				  </div>
 				</div>
 			</section>
 			<!-- hlpSec -->
@@ -215,23 +219,30 @@
 				</div>
 			</section>
 			<!-- olneBook -->
-			<aside class="olneBook bgTheme py-7">
+			<aside class="olneBook bgTheme py-7" style="background-color: #333; padding: 2rem 0;">
 				<div class="container">
 				  <div class="d-md-flex align-items-center justify-content-center text-center text-md-left">
 					<h3 class="h4 text-white fwSemibold mb-4 mb-md-0">Easy Online Carwash Booking System</h3>
-					<a href="javascript:void(0);" class="btn btn-primary fwEbold text-uppercase py-3 py-lg-4 ml-md-4 ml-lg-6" data-toggle="modal" data-target="#exampleModal">bOOK aPPOINTMENT</a>
-					<div class="d-flex flex-wrap ml-md-4 ml-lg-6">
-					  <span class="ico d-block mr-lg-2 pt-lg-2">
-						<a href="tel:1-403-481-0433" class="fas fa-phone rounded-sm p-lg-0 icn"></a>
-					  </span>
-					  <div class="wrap d-none d-lg-block">
-						<span class="text d-block text-white">Call Now</span>
-						<a class="tell fwSemibold text-white" href="tel:+14034810433">1-403-481-0433</a>
-					  </div>
+					<div class="d-flex flex-column flex-md-row justify-content-center justify-content-md-start" style="gap: 10px;">
+					  <!-- Book Appointment Button -->
+					  <a href="javascript:void(0);" 
+						 class="btn btn-primary fwEbold text-uppercase py-3 py-lg-4" 
+						 data-toggle="modal" 
+						 data-target="#exampleModal" 
+						 style="background-color: #007bff; border-color: #007bff; color: #fff; text-decoration: none; padding: 10px 20px; font-weight: bold; border-radius: 4px; margin: 0 10px; display: inline-block;">
+						 Book Appointment
+					  </a>
+					  <!-- Call Now Button -->
+					  <a href="tel:+14034810433" 
+						 class="btn btn-success fwEbold text-uppercase py-3 py-lg-4" 
+						 style="background-color: #28a745; border-color: #28a745; color: #fff; text-decoration: none; padding: 10px 20px; font-weight: bold; border-radius: 4px; margin: 0 10px; display: inline-block;">
+						 Call Now
+					  </a>
 					</div>
 				  </div>
 				</div>
-			</aside>
+			  </aside>
+			  
 			<!-- wsiSec -->
 			<section class="wsiSec py-10 pt-md-14 pb-md-12">
 				<div class="container">
