--- a/contact 1.html
+++ b/contact 1.html
@@ -30,7 +30,7 @@
 						<div class="col-6 col-md-4">
 							<!-- Logo -->
 							<div class="logo position-relative">
-								<a href="homepage.html">
+								<a href="index.html">
 									<img src="images/logo 1.png" alt="Auto &amp; Detailing template" class="img-fluid">
 								</a>
 							</div>
@@ -50,7 +50,7 @@
 								</li>
 								<li class="d-flex flex-wrap">
 									<span class="ico d-block mr-lg-2 pt-lg-2">
-										<a href="tel:1-800-123-4567" class="fas fa-phone rounded-sm p-lg-0 icn"></a>
+										<a href="tel:1-403-481-0433" class="fas fa-phone rounded-sm p-lg-0 icn"></a>
 									</span>
 									<div class="wrap d-none d-lg-block">
 										<span class="text d-block">Call Now</span>
@@ -72,7 +72,7 @@
 					<nav class="navbar navHolder d-flex navbar-expand-lg navbar-dark p-0 mt-lg-0 mr-lg-0 position-static">
 						<!-- MenuLogo -->
 						<div class="menuLogo">
-							<a href="homepage.html">
+							<a href="index.html">
 								<img src="images/logo 3.png" alt="Auto &amp; Detailing template" class="img-fluid logoWhite">
 								<img src="images/logo 1.png" alt="Auto &amp; Detailing template" class="img-fluid logoBlack">
 							</a>
@@ -84,7 +84,7 @@
 						<div class="collapse navbar-collapse navCollapse text-uppercase fwBlack" id="navbarNav">
 							<ul class="navbar-nav">
 								<li class="nav-item active">
-									<a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+									<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="service-page.html">Services &amp; Pricing</a>
@@ -106,6 +106,7 @@
 					</nav>
 				</div>
 			</div>
+			
 		</header>
 		<!-- main -->
 		<main>
