Update Service Page and Contact Page

--- a/contact 1.html
+++ b/contact 1.html
@@ -285,7 +285,7 @@
 		</div> -->
 	</div>
 	<!-- include jQuery library -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<!-- include popup library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<!-- include bootstrap JavaScript -->
