--- a/service-page.html
+++ b/service-page.html
@@ -458,12 +458,12 @@
 
 
 		<!-- loader of the page -->
-		<div id="loader" class="loader-holder">
+		<!-- <div id="loader" class="loader-holder">
 			<div class="block"><img src="images/svg/three-dots.svg" width="60" alt="loader"></div>
-		</div>
+		</div> -->
 	</div>
 	<!-- include jQuery library -->
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<!-- include popup library -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<!-- include bootstrap JavaScript -->
