text and button color edit

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="style.css">
 	<!-- include the site stylesheet -->
 	<link rel="stylesheet" href="css/responsive.css">
+	<!-- Favicon -->
+    <link rel="icon" href="./images/favicon.png" type="image/x-coin">
 </head>
 <body>
 	<!-- pageWrapper -->
@@ -162,7 +164,7 @@
 						<!-- hlpBlockList -->
 						<div class="col-12 d-flex flex-wrap hlpBlockList">
 							<!-- hlpBlock -->
-							<article class="hlpBlock col-12 col-lg-4 w-100 text-center p-7 p-lg-5 p-xl-8" data-background="primary">
+							<article class="hlpBlock col-12 col-lg-6 w-100 text-center p-7 p-lg-5 p-xl-8" data-background="primary">
 								<span class="icoHolder mb-5 d-block mx-auto">
 									<span class="ico icon-ico28"></span>
 								</span>
@@ -179,7 +181,7 @@
 							</article>
 							<!-- hlpBlock -->
 							<!-- hlpBlock -->
-							<article class="hlpBlock col-12 col-lg-4 w-100 text-center p-7 p-lg-5 p-xl-8" data-background="warning">
+							<article class="hlpBlock col-12 col-lg-6 w-100 text-center p-7 p-lg-5 p-xl-8" data-background="warning">
 								<span class="icoHolder mb-5 d-block mx-auto">
 									<span class="ico icon-ico30"></span>
 								</span>
@@ -204,7 +206,7 @@
 			<section class="abtSec py-12 pt-md-15 pb-md-17">
 				<div class="container">
 					<div class="row">
-						<div class="col-12 col-lg-6 pr-xl-10 mb-3">
+						<div class="col-12 col-lg-12 pr-xl-10 mb-3">
 							<div class="row">
 								<div class="col-12">
 									<div class="imgHolder mb-4">
@@ -745,13 +747,13 @@
 			<section class="rqstSrvic py-14 bg-greyBlue">
 				<div class="container">
 					<div class="row align-items-center">
-						<div class="col-12 col-md-6 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
+						<div class="col-12 col-md-12 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
 							<h4 class="h4 pb-4 mb-5 position-relative text-white">Request a Call Back for Your Next Car Wash Service</h4>
 							<p>Experience the best in car detailing with Orbit Interior Auto Detailing. Reach out to us for your next service. Call us at 1-403-481-0433 between 09:00 and 18:00, Monday to Sunday.</p>
 							<strong class="d-block headingIV mb-9">Call: <a href="tel:14034810433">1-403-481-0433</a></strong>
 							
-							<!-- "Book Online" Button -->
-							<a href="book-online.html" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Book Online</a>
+							<!-- "Call Us Now" Button -->
+							<a href="tel:+14034810433" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Call Us Now</a>
 							
 							<!-- "Text Us Now" Button -->
 							<a href="sms:+14034810433?body=Hi%20there%2C%20I%27d%20like%20to%20schedule%20a%20car%20wash%20service%21" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Text Us Now</a>
