--- a/contact 1.html
+++ b/contact 1.html
@@ -118,8 +118,8 @@
 							<!-- breadcrumb -->
 							<nav aria-label="breadcrumb" class="d-flex justify-content-center justify-content-lg-start">
 								<ol class="breadcrumb text-capitalize mb-0 p-0">
-									<li class="breadcrumb-item"><a href="homepage.html">Home</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Services &amp; Pricing</li>
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+									<li class="breadcrumb-item active" aria-current="page"> Contact</li>
 								</ol>
 							</nav>
 						</div>
@@ -132,14 +132,13 @@
 			<section class="rqstSrvic py-14 bg-greyBlue">
 				<div class="container">
 					<div class="row align-items-center">
-						<div class="col-12 col-md-6 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
+						<div class="col-12 col-md-12 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
 							<h4 class="h4 pb-4 mb-5 position-relative text-white">Request a Call Back for Your Next Car Wash Service</h4>
 							<p>Experience the best in car detailing with Orbit Interior Auto Detailing. Reach out to us for your next service. Call us at 1-403-481-0433 between 09:00 and 18:00, Monday to Sunday.</p>
 							<strong class="d-block headingIV mb-9">Call: <a href="tel:14034810433">1-403-481-0433</a></strong>
 							
-							<!-- "Book Online" Button -->
-							<a href="book-online.html" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Book Online</a>
-							
+							<!-- "Call Us Now" Button -->
+							<a href="tel:+14034810433" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Call Us Now</a>
 							<!-- "Text Us Now" Button -->
 							<a href="sms:+14034810433?body=Hi%20there%2C%20I%27d%20like%20to%20schedule%20a%20car%20wash%20service%21" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Text Us Now</a>
 						</div>
@@ -194,7 +193,6 @@
 							<div class="txtHolder w-100">
 								<h6 class="h6 text-capitalize fwEbold text-white mb-4 mb-sm-5 mb-lg-6">About Us</h6>
 <p>At Orbit Interior Auto Detailing, we are committed to delivering high-quality interior car detailing services. Our team is dedicated to making your car look its best with meticulous attention to detail and exceptional customer care.</p>
-<a href="About us.html" class="btn btn-outline-light text-uppercase fwEbold py-lg-3">Learn More</a>
 
 							</div>
 						</div>
