--- a/service-page.html
+++ b/service-page.html
@@ -177,18 +177,107 @@
 				</div>
 			</section>
 
+			<!-- plnSec -->
+			<section class="plnSec py-10 py-md-14">
+				<div class="container">
+					<div class="row">
+						<div class="col-12">
+							<header class="header text-center ltrSpce font-weight-light">
+								<h3 class="h2 fwEbold mb-2">Interior Detailing Packages</h3>
+								<p>Choose from our comprehensive detailing packages to keep your vehicle looking its best.</p>
+							</header>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12 col-sm-6 col-lg-6 d-flex">
+							<!-- planList -->
+							<article class="planList text-center rounded position-relative w-100 mb-6 mb-8 mb-lg-11" style="background-color: #e7f1ff; border: 1px solid #cce4f6;">
+								<header>
+									<h3 class="headingXI text-capitalize px-3 mb-0" style="color: #0056b3;">Basic Interior Detailing</h3>
+									<!-- priceHolder -->
+									<div class="priceHolder px-3 pt-4 pb-5">
+										<span>Starting from</span>
+										<div class="wrap mb-1">
+											<sup class="font-weight-light">CAD</sup>
+											<span class="price font-weight-light" style="color: #0056b3;">119</span>
+										</div>
+									</div>
+								</header>
+								<!-- typeList -->
+								<ul class="list-unstyled pt-8 pb-23 typeList text-secondary mb-0 px-5 text-left">
+									<li><span style="color: #007bff; font-weight: bold;">Small Cars:</span> <span style="color: #0056b3;">CAD 119</span> (e.g., Honda Civic, Toyota Corolla)</li>
+									<li><span style="color: #28a745; font-weight: bold;">Mid-Size Cars:</span> <span style="color: #0056b3;">CAD 129</span> (e.g., Toyota Camry, Honda Accord)</li>
+									<li><span style="color: #ffc107; font-weight: bold;">SUVs & Trucks:</span> <span style="color: #0056b3;">CAD 139</span> (e.g., Ford Explorer, Toyota Highlander, Chevrolet Silverado, Ford F-150)</li>
+									<li><span style="color: #dc3545; font-weight: bold;">Vans & Boats:</span> <span style="color: #0056b3;">CAD 249</span> (e.g., Dodge Grand Caravan, Honda Odyssey, Small recreational boats)</li>
+									<div class="addOns mt-0"> <!-- Adjusted margin-top -->
+										<h4 style="color: #0056b3; font-weight: bold;">Add-Ons:</h4>
+										<ul class="list-unstyled pt-2 pb-4 text-secondary mb-0 px-5 text-left">
+											<li><span style="color: #007bff; font-weight: bold;">Pet Hair Removal:</span> <span style="color: #0056b3;">CAD 50 - 75</span></li>
+											<li><span style="color: #28a745; font-weight: bold;">Stain Removal:</span> <span style="color: #0056b3;">CAD 30 - 50 per stain</span></li>
+											<li><span style="color: #ffc107; font-weight: bold;">Odor Removal:</span> <span style="color: #0056b3;">CAD 50 - 75</span></li>
+											<li><span style="color: #dc3545; font-weight: bold;">Seat Conditioning:</span> <span style="color: #0056b3;">CAD 50 - 75</span></li>
+											<li><span style="color: #6c757d; font-weight: bold;">Debris Removal:</span> <span style="color: #0056b3;">CAD 40 - 60</span> (for large debris like construction materials or significant garbage)</li>
+										</ul>
+									</div>
+								</ul>
+								<div class="d-flex flex-column flex-md-row justify-content-center">
+									<!-- <a href="javascript:void(0);" class="btn btn-warning py-xl-4 text-uppercase fwEbold mb-3 mb-md-0" data-toggle="modal" data-target="#exampleModal" style="margin-right: 10px;">Book Online Now!</a> -->
+									<a href="tel:+14034810433" class="btn" style="background-color: #007bff; border-color: #007bff; color: #fff; text-transform: uppercase; font-weight: bold; padding: 0.75rem 1.5rem;">Call Us Now</a>
+									<a href="sms:+14034810433" class="btn" style="background-color: #28a745; border-color: #28a745; color: #fff; text-transform: uppercase; font-weight: bold; padding: 0.75rem 1.5rem;">Text Us Now</a>
+								</div>
+							</article>
+						</div>
+						<div class="col-12 col-sm-6 col-lg-6 d-flex">
+							<!-- planList -->
+							<article class="planList text-center rounded position-relative w-100 mb-6 mb-8 mb-lg-11" style="background-color: #f1f0f0; border: 1px solid #e2e2e2;">
+								<header>
+									<h3 class="headingXI text-capitalize px-3 mb-0" style="color: #17a2b8;">Premium Interior Detailing</h3>
+									<!-- priceHolder -->
+									<div class="priceHolder px-3 pt-4 pb-5">
+										<span>Starting from</span>
+										<div class="wrap mb-1">
+											<sup class="font-weight-light">CAD</sup>
+											<span class="price font-weight-light" style="color: #17a2b8;">179</span>
+										</div>
+									</div>
+								</header>
+								<!-- typeList -->
+								<ul class="list-unstyled pt-8 pb-23 typeList text-secondary mb-0 px-5 text-left">
+									<li><span style="color: #007bff; font-weight: bold;">Small Cars:</span> <span style="color: #17a2b8;">CAD 179</span> (e.g., Honda Civic, Toyota Corolla)</li>
+									<li><span style="color: #28a745; font-weight: bold;">Mid-Size Cars:</span> <span style="color: #17a2b8;">CAD 189</span> (e.g., Toyota Camry, Honda Accord)</li>
+									<li><span style="color: #ffc107; font-weight: bold;">SUVs & Trucks:</span> <span style="color: #17a2b8;">CAD 199</span> (e.g., Ford Explorer, Toyota Highlander, Chevrolet Silverado, Ford F-150)</li>
+									<li><span style="color: #dc3545; font-weight: bold;">Vans & Boats:</span> <span style="color: #17a2b8;">CAD 279</span> (e.g., Dodge Grand Caravan, Honda Odyssey, Small recreational boats)</li>
+									<!-- Add-Ons -->
+									<div class="addOns mt-2"> <!-- Adjusted margin-top -->
+										<h4 style="color: #17a2b8; font-weight: bold;">Add-Ons:</h4>
+										<ul class="list-unstyled pt-2 pb-4 text-secondary mb-0 px-5 text-left">
+											<li><span style="color: #6c757d; font-weight: bold;">Debris Removal:</span> <span style="color: #17a2b8;">CAD 40 - 60</span> (for large debris like construction materials or significant garbage)</li>
+										</ul>
+									</div>
+								</ul>
+								<div class="d-flex flex-column flex-md-row justify-content-center">
+									<!-- <a href="javascript:void(0);" class="btn btn-warning py-xl-4 text-uppercase fwEbold mb-3 mb-md-0" data-toggle="modal" data-target="#exampleModal" style="margin-right: 10px;">Book Online Now!</a> -->
+									<a href="tel:+14034810433" class="btn" style="background-color: #007bff; border-color: #007bff; color: #fff; text-transform: uppercase; font-weight: bold; padding: 0.75rem 1.5rem;">Call Us Now</a>
+									<a href="sms:+14034810433" class="btn" style="background-color: #28a745; border-color: #28a745; color: #fff; text-transform: uppercase; font-weight: bold; padding: 0.75rem 1.5rem;">Text Us Now</a>
+								</div>
+							</article>
+						</div>
+					</div>
+				</div>
+			</section>
+
 
 			<!-- rqstSrvic -->
 			<section class="rqstSrvic py-14 bg-greyBlue">
 				<div class="container">
 					<div class="row align-items-center">
-						<div class="col-12 col-md-6 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
+						<div class="col-12 col-md-12 text-white text-center px-xl-13 mb-10 mb-md-2 txtHolder">
 							<h4 class="h4 pb-4 mb-5 position-relative text-white">Request a Call Back for Your Next Car Wash Service</h4>
 							<p>Experience the best in car detailing with Orbit Interior Auto Detailing. Reach out to us for your next service. Call us at 1-403-481-0433 between 09:00 and 18:00, Monday to Sunday.</p>
 							<strong class="d-block headingIV mb-9">Call: <a href="tel:14034810433">1-403-481-0433</a></strong>
 							
-							<!-- "Book Online" Button -->
-							<a href="book-online.html" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Book Online</a>
+							<!-- "Call Us Now" Button -->
+							<a href="tel:+14034810433" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Call Us Now</a>
 							
 							<!-- "Text Us Now" Button -->
 							<a href="sms:+14034810433?body=Hi%20there%2C%20I%27d%20like%20to%20schedule%20a%20car%20wash%20service%21" class="btn btnTheme fwEbold text-uppercase py-3 py-lg-4 px-5 px-lg-6">Text Us Now</a>
