--- a/index.html
+++ b/index.html
@@ -621,16 +621,16 @@
 									<div class="col-12">
 										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
 											<!-- Icon Holder -->
-											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8">
-												<img src="images/ico15.svg" alt="Star Icon" width="36" height="28" class="img-fluid">
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 2.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
 											</div>
+											
 											<!-- Quote -->
 											<q class="d-block mb-7">"The convenience of having a top-quality car detailing service come to my home is unbeatable. My car looks brand new every time, and it's so easy with my busy schedule. Highly recommend!"</q>
 											<!-- Customer Info -->
 											<cite class="d-block">
 												<strong class="customer d-block mb-1">
 													<a href="javascript:void(0);" class="fwSemibold">Emily Johnson</a>
-													<em>- Satisfied Customer</em>
+													<em>-I Am 100% Satisfied</em>
 												</strong>
 											</cite>
 											<!-- Rating -->
@@ -645,16 +645,16 @@
 									<div class="col-12">
 										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
 											<!-- Icon Holder -->
-											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8">
-												<img src="images/ico15.svg" alt="Star Icon" width="36" height="28" class="img-fluid">
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 1.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
 											</div>
+											
 											<!-- Quote -->
 											<q class="d-block mb-7">"I was amazed by the level of detail and care they put into cleaning my SUV. From the seats to the carpets, everything was spotless. It's a game changer for busy families!"</q>
 											<!-- Customer Info -->
 											<cite class="d-block">
 												<strong class="customer d-block mb-1">
 													<a href="javascript:void(0);" class="fwSemibold">Michael Lee</a>
-													<em>- Happy Client</em>
+													<em>- My Car Looks Brand New! </em>
 												</strong>
 											</cite>
 											<!-- Rating -->
@@ -669,8 +669,7 @@
 									<div class="col-12">
 										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
 											<!-- Icon Holder -->
-											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8">
-												<img src="images/ico15.svg" alt="Star Icon" width="36" height="28" class="img-fluid">
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 5.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
 											</div>
 											<!-- Quote -->
 											<q class="d-block mb-7">"Orbit's detailing service is outstanding. They managed to remove all the pet hair and stains from my car. It's like driving a new car again!"</q>
@@ -678,7 +677,7 @@
 											<cite class="d-block">
 												<strong class="customer d-block mb-1">
 													<a href="javascript:void(0);" class="fwSemibold">Sarah Mitchell</a>
-													<em>- Loyal Customer</em>
+													<em>- Worth Every Penny</em>
 												</strong>
 											</cite>
 											<!-- Rating -->
@@ -693,8 +692,7 @@
 									<div class="col-12">
 										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
 											<!-- Icon Holder -->
-											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8">
-												<img src="images/ico15.svg" alt="Star Icon" width="36" height="28" class="img-fluid">
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 3.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
 											</div>
 											<!-- Quote -->
 											<q class="d-block mb-7">"The guy at Orbit did an amazing job on my car's interior. They were professional, thorough, and the results were incredible. Highly recommend their services!"</q>
@@ -702,7 +700,7 @@
 											<cite class="d-block">
 												<strong class="customer d-block mb-1">
 													<a href="javascript:void(0);" class="fwSemibold">James Anderson</a>
-													<em>- Happy Customer</em>
+													<em>-Highly Recommend His Service!</em>
 												</strong>
 											</cite>
 											<!-- Rating -->
@@ -717,8 +715,7 @@
 									<div class="col-12">
 										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
 											<!-- Icon Holder -->
-											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8">
-												<img src="images/ico15.svg" alt="Star Icon" width="36" height="28" class="img-fluid">
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 4.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
 											</div>
 											<!-- Quote -->
 											<q class="d-block mb-7">"Orbit's interior detailing service is fantastic. They took care of every detail and made my car look immaculate. Will definitely use their service again!"</q>
@@ -726,7 +723,7 @@
 											<cite class="d-block">
 												<strong class="customer d-block mb-1">
 													<a href="javascript:void(0);" class="fwSemibold">Laura White</a>
-													<em>- Satisfied Client</em>
+													<em>- Satisfied </em>
 												</strong>
 											</cite>
 											<!-- Rating -->
