Update Customers Comment Section

--- a/index.html
+++ b/index.html
@@ -733,6 +733,98 @@
 										</blockquote>
 									</div>
 								</div>
+								<!-- Feedback Slide 6 -->
+								<div>
+									<div class="col-12">
+										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
+											<!-- Icon Holder -->
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 10.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
+											</div>
+											<!-- Quote -->
+											<q class="d-block mb-7">"You can tell the guy at Orbit really cares about his work. He worked tirelessly on my car, and it looks absolutely stunning. "</q>
+											<!-- Customer Info -->
+											<cite class="d-block">
+												<strong class="customer d-block mb-1">
+													<a href="javascript:void(0);" class="fwSemibold">Johnathan</a>
+													<em>- Great job! </em>
+												</strong>
+											</cite>
+											<!-- Rating -->
+											<span class="imgHolder mx-auto d-block">
+												<img src="images/rating.png" class="img-fluid" alt="Customer Rating">
+											</span>
+										</blockquote>
+									</div>
+								</div>
+								<!-- Feedback Slide 7 -->
+								<div>
+									<div class="col-12">
+										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
+											<!-- Icon Holder -->
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 8.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
+											</div>
+											<!-- Quote -->
+											<q class="d-block mb-7">"Superb Experience! Orbit's team went above and beyond. My car’s interior looks pristine, and the customer service was top-notch. "</q>
+											<!-- Customer Info -->
+											<cite class="d-block">
+												<strong class="customer d-block mb-1">
+													<a href="javascript:void(0);" class="fwSemibold">Samantha B</a>
+													<em>- I’ll be back for sure! </em>
+												</strong>
+											</cite>
+											<!-- Rating -->
+											<span class="imgHolder mx-auto d-block">
+												<img src="images/rating.png" class="img-fluid" alt="Customer Rating">
+											</span>
+										</blockquote>
+									</div>
+								</div>
+								<!-- Feedback Slide 8 -->
+								<div>
+									<div class="col-12">
+										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
+											<!-- Icon Holder -->
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 7.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
+											</div>
+											<!-- Quote -->
+											<q class="d-block mb-7">"As a mama with a van full of kids, Orbit's detailing saved my sanity! The guy worked hard to clean every crumb and spill—my van looks brand new!"</q>
+											<!-- Customer Info -->
+											<cite class="d-block">
+												<strong class="customer d-block mb-1">
+													<a href="javascript:void(0);" class="fwSemibold">Emily Parker</a>
+													<em>- 100% Satisfied, Can’t wait to book again! </em>
+												</strong>
+											</cite>
+											<!-- Rating -->
+											<span class="imgHolder mx-auto d-block">
+												<img src="images/rating.png" class="img-fluid" alt="Customer Rating">
+											</span>
+										</blockquote>
+									</div>
+								</div>
+								<!-- Feedback Slide 9 -->
+								<div>
+									<div class="col-12">
+										<blockquote class="blockquote text-center px-lg-15 px-xl-28 pb-10">
+											<!-- Icon Holder -->
+											<div class="icoHolder rounded-circle d-flex justify-content-center align-items-center mx-auto mt-n8 mb-8" style="background-image: url('images/customer photo 9.jpg'); background-size: cover; background-position: center; width: 100px; height: 100px;">
+											</div>
+											<!-- Quote -->
+											<q class="d-block mb-7">"Being in construction, my car takes a beating. The guy at Orbit put in the work and made it look pristine again. Highly recommend!"</q>
+											<!-- Customer Info -->
+											<cite class="d-block">
+												<strong class="customer d-block mb-1">
+													<a href="javascript:void(0);" class="fwSemibold">Harrison</a>
+													<em>- Amazing job! </em>
+												</strong>
+											</cite>
+											<!-- Rating -->
+											<span class="imgHolder mx-auto d-block">
+												<img src="images/rating.png" class="img-fluid" alt="Customer Rating">
+											</span>
+										</blockquote>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
