detailing basic pakage update

--- a/service-page.html
+++ b/service-page.html
@@ -165,13 +165,21 @@
 							<div class="service-section">
 								<h3 style="color: #007bff; font-weight: bold;">Basic Interior Detailing</h3>
 								<ul class="list-unstyled d-sm-flex mb-0 checkList flex-wrap pt-2">
-									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Vacuum Every Corner</li>
-									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Carpet Cleaning</li>
-									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Pet Hair Removal</li>
-									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Dust Removal from Dashboard, Consoles, and Door Panels</li>
-									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Window and Mirror Cleaning</li>
+									<li class="position-relative pr-md-3">
+										<span class="ico position-absolute icon-check"></span> Vacuum Every Corner
+									</li>
+									<li class="position-relative pr-md-3">
+										<span class="ico position-absolute icon-check"></span> Carpet Cleaning
+									</li>
+									<li class="position-relative pr-md-3">
+										<span class="ico position-absolute icon-check"></span> Dust Removal from Dashboard, Consoles, and Door Panels
+									</li>
+									<li class="position-relative pr-md-3">
+										<span class="ico position-absolute icon-check"></span> Window and Mirror Cleaning
+									</li>
 								</ul>
 							</div>
+							
 						</div>
 					</div>
 				</div>
