detailing basic pakage update

--- a/service-page.html
+++ b/service-page.html
@@ -163,7 +163,7 @@
 			
 							<!-- Basic Interior Detailing -->
 							<div class="service-section">
-								<h3 style="color: #007bff; font-weight: bold;">Basic Interior Detailing</h3>
+								<h3 style="color: #007bff; font-weight: bold;">Basic Interior Detailing <span style="font-size: 0.9em; color: #28a745;">(Recommended for Regular Maintenance)</span></h3>
 								<ul class="list-unstyled d-sm-flex mb-0 checkList flex-wrap pt-2">
 									<li class="position-relative pr-md-3">
 										<span class="ico position-absolute icon-check"></span> Vacuum Every Corner
@@ -172,13 +172,20 @@
 										<span class="ico position-absolute icon-check"></span> Carpet Cleaning
 									</li>
 									<li class="position-relative pr-md-3">
+										<span class="ico position-absolute icon-check"></span> Pet Hair Removal
+									</li>
+									<li class="position-relative pr-md-3">
 										<span class="ico position-absolute icon-check"></span> Dust Removal from Dashboard, Consoles, and Door Panels
 									</li>
 									<li class="position-relative pr-md-3">
 										<span class="ico position-absolute icon-check"></span> Window and Mirror Cleaning
 									</li>
 								</ul>
+								<p style="color: #6c757d; font-size: 0.9em; margin-top: 10px;">
+									Ideal for maintaining cleanliness and freshness in cars with moderate use.
+								</p>
 							</div>
+							
 							
 						</div>
 					</div>
