detailing primium  pakage update

--- a/index.html
+++ b/index.html
@@ -414,7 +414,11 @@
 									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Spot Treatment</li>
 									<li class="position-relative pr-md-3"><span class="ico position-absolute icon-check"></span>Interior Deodorizing</li>
 								</ul>
+								<p style="color: #6c757d; font-size: 0.9em; margin-top: 10px;">
+									Ideal for luxury vehicles and those who demand an exceptionally fresh and pristine interior. This package is designed for car owners who seek the highest level of care and attention to detail.
+								</p>
 							</div>
+							
 			
 							<!-- Basic Interior Detailing -->
 							<div class="service-section">
